--- a/theos_money_guide.html
+++ b/theos_money_guide.html
@@ -183,7 +183,7 @@
             </li>
         </ul>
 
-        <h2>2. Bank Offers</h2>
+        <h2>2. Bank Offers <span class="total">Total: Up to £1000+</span></h2>
         <ul>
             <li>Two types: Bank switches (if you have ~£1000 in savings) or Student bank accounts (no money needed for most)</li>
 
@@ -198,7 +198,7 @@
             </li>
         </ul>
 
-        <h2>3. Matched Betting</h2>
+        <h2>3. Matched Betting <span class="total">Total: ~£700</span></h2>
         <ul>
             <li>Quite complicated, but ~£700 to be made</li>
             <li>Need around £100 liquid to get started</li>
@@ -233,9 +233,28 @@
             </li>
         </ul>
 
+        <h2>6. Survey Sites</h2>
+        <ul>
+            <li class="offer-item">
+                <strong>Y Live:</strong> Earn £1 for every 5 minutes completing surveys. Members have received over £20 million in payouts since 2010. Cash paid directly to your bank account when you reach £50.
+                <a href="https://www.ylive-community.com" target="_blank">https://www.ylive-community.com</a>
+            </li>
+
+            <li class="offer-item">
+                <strong>UserCrowd:</strong> Participate in quick surveys, design tests, and interviews. Earn money for giving feedback on designs and prototypes. Minimum $10 payout via PayPal.
+                <a href="https://www.usercrowd.com" target="_blank">https://www.usercrowd.com</a>
+            </li>
+
+            <li class="offer-item">
+                <strong>PaidViewpoint:</strong> Get paid cash for every completed survey (no points system). $15 minimum for first cashout, then rewards processed within 72 hours via PayPal.
+                <a href="https://paidviewpoint.com/landing/?r=rbrr9c" target="_blank">https://paidviewpoint.com/landing/?r=rbrr9c</a>
+            </li>
+        </ul>
+
         <div class="note">
             <strong>Note:</strong> Always read the terms and conditions of each offer. Most offers require you to be 18+ and a UK resident. Payout times may vary.
         </div>
     </div>
 </body>
 </html>
+
