Replace 'pill' class with 'intro-note' class

--- a/theos_money_guide.html
+++ b/theos_money_guide.html
@@ -88,14 +88,12 @@
             border-radius: 4px;
         }
 
-        .pill {
-            display: inline-block;
-            background: #eef2ff;
-            color: #3b4cca;
-            padding: 4px 10px;
-            border-radius: 999px;
-            font-size: 0.9em;
-            font-weight: 600;
+        .intro-note {
+            background: #e7f3ff;
+            border-left: 4px solid #0d6efd;
+            padding: 15px;
+            margin: 20px 0;
+            border-radius: 4px;
         }
 
         @media (max-width: 600px) {
@@ -109,31 +107,43 @@
 <div class="container">
     <h1>Theo's Guide to Making Some Money</h1>
 
+    <div class="intro-note">
+        <strong>Introduction:</strong> Overview of some of my earnings: <a href="https://www.reddit.com/r/beermoneyuk/comments/1q27ne5/december_earnings_report_185826_started_user/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Earnings overview</a>
+    </div>
+
     <h2>1. Easy Sign Up Offers <span class="total">Total: £175</span></h2>
     <ul>
         <li class="offer-item">
             <strong>Cashback UK</strong>, ~£60 for signing up to various sites, very easy, payout after 2 weeks, takes at most an hour to complete the minimum tasks.
-            <a href="https://cashback.co.uk?referral=d9393956-e19d-434b-8850-4c5f6195902e&utm_source=referral&utm_medium=referral" target="_blank" rel="noopener">Sign up here</a>
+            <a href="https://cashback.co.uk?referral=d9393956-e19d-434b-8850-4c5f6195902e&utm_source=referral&utm_medium=referral" target="_blank" rel="noopener">Cashback UK link</a>
             <div class="sub-item">Some tasks I recommend: Kitty Bingo (£12.50), PokerParty (£15), GoHenry (£10)</div>
         </li>
 
         <li class="offer-item"><strong>Monzo:</strong> £10-£50 for making a bank account (instant) <a href="https://join.monzo.com/c/6h8qw7ld" target="_blank" rel="noopener">Monzo link</a></li>
-        <li class="offer-item"><strong>Zopa:</strong> £10 for making a bank account (usually instant). <a href="http://<a href="http://www.zopa.com/mgma?referralCode=3bea156851381e852198" target="_blank" rel="noopener">Zopa link</a>" target="_blank" rel="noopener">Zopa link</a></li>
+
+        <li class="offer-item"><strong>Zopa:</strong> £10 for making a bank account (usually instant). <a href="http://www.zopa.com/mgma?referralCode=3bea156851381e852198" target="_blank" rel="noopener">Zopa link</a></li>
+
         <li class="offer-item"><strong>Revolut:</strong> £20 for making a bank account and spending £1 (instant)</li>
+
         <li class="offer-item"><strong>Zilch:</strong> £5 for signing up to a cashback debit card. <a href="https://zilch.onelink.me/x8EV/f0dqxjv6" target="_blank" rel="noopener">Zilch link</a></li>
-        <li class="offer-item">If you plan to make a £50 online purchase at any time (e.g. train tickets), with <strong>Rakuten</strong> once you spend £50+ you will get £25 (takes a couple weeks to payout usually). <a href="http://<a href="http://www.rakuten.co.uk/r/THEOJS3?eeid=28187" target="_blank" rel="noopener">Rakuten link</a>" target="_blank" rel="noopener">Rakuten link</a></li>
+
+        <li class="offer-item">If you plan to make a £50 online purchase at any time (e.g. train tickets), with <strong>Rakuten</strong> once you spend £50+ you will get £25 (takes a couple weeks to payout usually). <a href="http://www.rakuten.co.uk/r/THEOJS3?eeid=28187" target="_blank" rel="noopener">Rakuten link</a></li>
+
         <li class="offer-item"><strong>Robinhood:</strong> Free share $7-$175 (most likely $7 (£5)) after depositing £1 (withdraw after 30 days). <a href="https://join.robinhood.com/theoi-609cc1dc" target="_blank" rel="noopener">Robinhood link</a></li>
+
         <li class="offer-item"><strong>Trading 212:</strong> Free share £8-£100 (I got lucky and got £45) after depositing £1 (share within 3 days, withdraw after 30 more days). <a href="https://www.trading212.com/invite/1ASsnFZSZI" target="_blank" rel="noopener">Trading 212 link</a></li>
+
         <li class="offer-item"><strong>Quidco:</strong> £20 bonus after earning £5 cashback (very easy at the moment with only buying a £1.20 bus ticket) (Takes a few weeks). <a href="https://quidco.com/raf/16126111/" target="_blank" rel="noopener">Quidco link</a></li>
+
         <li class="offer-item"><strong>TopCashback:</strong> £10 bonus after earning £10 cashback (easy when signing up to bank accounts) (closer to a couple of months to payout). <a href="https://www.topcashback.co.uk/ref/sirwormy" target="_blank" rel="noopener">TopCashback link</a>
-            <div class="sub-item">(Sign up to Santander student current account to get £25 + the £10 bonus, other good sign ups: £10 for Plum, ~£40ish via hearst magazines black Friday deals (<a href="https://www.reddit.com/user/Immediate-Truth-171/comments/1p7hgcl/guide_to_making_the_most_5830_profit_of_hearst/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">This links for a detailed guide</a>), also other Santander sign up offers to try afterwards</div>
+            <div class="sub-item">(Sign up to Santander student current account to get £25 + the £10 bonus, other good sign ups: £10 for Plum, ~£40ish via hearst magazines black Friday deals (<a href="https://www.reddit.com/user/Immediate-Truth-171/comments/1p7hgcl/guide_to_making_the_most_5830_profit_of_hearst/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Hearst guide</a>), also other Santander sign up offers to try afterwards</div>
         </li>
     </ul>
 
     <h2>2. Bank Offers <span class="total">Total: Up to £1000+</span></h2>
     <ul>
         <li>Two types: Bank switches (if you have ~£1000 in savings) or Student bank accounts (no money needed for most)</li>
-        <li class="offer-item"><strong>Student bank accounts</strong> (unfortunately most have ended)): Santander – 4 yr railcard + £25 + £10 bonus via <a href="https://www.topcashback.co.uk/ref/sirwormy" target="_blank" rel="noopener">Topcashback</a>, (search Santander student account in Topcashback and click the link there then sign up)</li>
+        <li class="offer-item"><strong>Student bank accounts</strong> (unfortunately most have ended): Santander – 4 yr railcard + £25 + £10 bonus via <a href="https://www.topcashback.co.uk/ref/sirwormy" target="_blank" rel="noopener">TopCashback link</a>, (search Santander student account in Topcashback and click the link there then sign up)</li>
         <li class="offer-item"><strong>Bank Switches</strong> (£1000 + available): <a href="https://www.reddit.com/r/beermoneyuk/comments/1oxpgxl/reddit_bank_switch_guide_november_2025_over_1800/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Bank switch guide</a></li>
     </ul>
 
@@ -142,7 +152,7 @@
         <li>Quite complicated, but ~£700 to be made</li>
         <li>Need around £100 liquid to get started</li>
         <li>Takes about a month to complete all offers</li>
-        <li class="offer-item"><a href="https://scrimpr.co.uk/gpt-search-engine/" target="_blank" rel="noopener">Scrimpr offer search</a> Check on here for which sites offer the best additional sign up bonuses (I would recommend Cashinstyle via Torox as the best, otherwise Custard or Cashback UK, otherwise try whatever but it may not track (which doesn’t matter since it is just an extra bonus on top))</li>
+        <li class="offer-item"><a href="https://scrimpr.co.uk/gpt-search-engine/" target="_blank" rel="noopener">Scrimpr offer search</a> Check on here for which sites offer the best additional sign up bonuses (I would recommend Cashinstyle via Torox as the best, otherwise Custard or Cashback UK, otherwise try whatever but it may not track (which doesn't matter since it is just an extra bonus on top))</li>
         <li class="offer-item"><a href="https://www.reddit.com/r/beermoneyuk/comments/188f3g8/how_ive_made_1000s_casually_matched_betting_the/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Matched betting guide</a></li>
         <li>I can probably explain better than the guide, and happy to help you place your first few bets to make sure you get it right</li>
     </ul>
@@ -151,14 +161,14 @@
     <ul>
         <li>Min 1.5% with Paypal debit card + Zilch</li>
         <li>Online purchases via Quidco/Rakuten/Topcashback or by far the best NX rewards (however not really worth the hassle unless you are making frequent large purchases as they have a monthly fee)</li>
-        <li>In store purchases there are lots of options for ~5% off gift cards, e.g. for Sainsbury’s/ Tescos (again not really worth it until next year when you are buying food)
+        <li>In store purchases there are lots of options for ~5% off gift cards, e.g. for Sainsbury's/ Tescos (again not really worth it until next year when you are buying food)
             <div class="sub-item">But this the best site:</div>
         </li>
     </ul>
 
     <h2>5. Some Other Random Offers</h2>
     <ul>
-        <li class="offer-item">$64 for signing up to PokerStars and playing $10 of poker (I can play it for you), via Torox offerwall in Cashinstyle. Link to Cashinstyle <a href="https://cashinstyle.com/?ref=68233704pwkay129" target="_blank" rel="noopener">CashInStyle link</a> , let me know when you have signed up and I can direct you to the offer.</li>
+        <li class="offer-item">$64 for signing up to PokerStars and playing $10 of poker (I can play it for you), via Torox offerwall in Cashinstyle. Link to Cashinstyle <a href="https://cashinstyle.com/?ref=68233704pwkay129" target="_blank" rel="noopener">CashInStyle link</a>, let me know when you have signed up and I can direct you to the offer.</li>
         <li class="offer-item"><a href="https://joincustard.co.uk/account/register?referral=a23e9551-acdc-4dfb-b4a4-caa843e8745e&utm_source=referral&utm_medium=internal" target="_blank" rel="noopener">Custard link</a> – some Bingo sign up offers here, minimum £5 profit, could get lucky like me. I have done LuckyPants (£12.50) bingo so far. Also a £2.50 bonus for using this link</li>
     </ul>
 
@@ -170,16 +180,14 @@
 
     <h2>7. Market Research Sites <span class="total">Total: £200+/month</span></h2>
     <ul>
-        <li class="offer-item"><span class="pill">Personal</span> I have made at least £200 per month with these sites.</li>
         <li class="offer-item"><strong>UserCrowd:</strong> <a href="https://www.usercrowd.com" target="_blank" rel="noopener">UserCrowd</a></li>
         <li class="offer-item"><strong>UserInterviews:</strong> <a href="https://www.userinterviews.com/r/oqytoolyo" target="_blank" rel="noopener">UserInterviews</a></li>
         <li class="offer-item"><strong>Respondent:</strong> <a href="https://app.respondent.io/r/theodoreisaac-2025c28fb484" target="_blank" rel="noopener">Respondent</a></li>
-        <li class="offer-item">Overview of some of my earnings: <a href="https://www.reddit.com/r/beermoneyuk/comments/1q27ne5/december_earnings_report_185826_started_user/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Earnings overview</a></li>
     </ul>
 
-    <h2>8. Sign Up Offers</h2>
+    <h2>8. Sign Up Offers <span class="total">Total: £100+/month</span></h2>
     <ul>
-        <li class="offer-item"><strong>Free Slots Kingdom:</strong> <a href="https://freeslotskingdom.com/lpm1?utm_source=XT6QDU22" target="_blank" rel="noopener">Free Slots Kingdom</a></li>
+        <li class="offer-item"><strong>Free Slots Kingdom:</strong> <a href="https://freeslotskingdom.com/lpm1?utm_source=XT6QDU22" target="_blank" rel="noopener">Free Slots Kingdom</a> - £100+ per month. You deposit a value then play it through, with blackjack recommended for the most likely returns.</li>
     </ul>
 
     <div class="note">
