Update introduction in money guide with December earnings

--- a/theos_money_guide.html
+++ b/theos_money_guide.html
@@ -108,7 +108,7 @@
     <h1>Theo's Guide to Making Some Money</h1>
 
     <div class="intro-note">
-        <strong>Introduction:</strong> Overview of some of my earnings: <a href="https://www.reddit.com/r/beermoneyuk/comments/1q27ne5/december_earnings_report_185826_started_user/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Earnings overview</a>
+        <strong>Introduction:</strong> Overview of my december earnings (reddit post link): <a href="https://www.reddit.com/r/beermoneyuk/comments/1q27ne5/december_earnings_report_185826_started_user/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button" target="_blank" rel="noopener">Earnings overview</a>
     </div>
 
     <h2>1. Easy Sign Up Offers <span class="total">Total: £175</span></h2>
